--- a/rebinnable_interactive_histogram/rebinnable_histogram.ipynb
+++ b/rebinnable_interactive_histogram/rebinnable_histogram.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"data/flights.csv\")"
+    "df = pd.read_csv(\"../data/flights.csv\")"
    ]
   },
   {
