creat bare minimum example

--- a/rebinnable_interactive_histogram/rebinnable_histogram.ipynb
+++ b/rebinnable_interactive_histogram/rebinnable_histogram.ipynb
@@ -4,14 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# How to interactively rebin your histograms on the fly\n",
-    "\n",
-    "In this notebook we use the [NYCFlights13](https://cran.r-project.org/web/packages/nycflights13/nycflights13.pdf) dataset, which contains information on all flights that departed NYC in 2013 (over 300,000 flights in total). To explore how to rebin a plotly histogram on the fly, we will visualize the distribution of **arrival delays in minutes**."
+    "# How to interactively rebin your histograms on the fly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,68 +31,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The starting point - an interacive histogram\n",
-    "\n",
-    "Here, we need to set the binwidth in the code."
+    "## The bare minimum"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def interactive_histogram(df, column_name):\n",
-    "    series = df[column_name]\n",
-    "\n",
-    "    # Change size to anything you want in order to adjust the binwidth, e.g. xbins={\"size\": 5}\n",
-    "    trace = go.Histogram(x=series, xbins={\"size\": None})\n",
+    "def rebinnable_interactive_histogram(series, initial_bin_width=10):\n",
     "    figure_widget = go.FigureWidget(\n",
-    "        data=[trace],\n",
-    "        layout=go.Layout(\n",
-    "            yaxis={\"title\": \"Count\"},\n",
-    "            xaxis={\"title\": column_name},\n",
-    "            bargap=0.05,\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "    return figure_widget\n",
-    "\n",
-    "interactive_histogram(df, \"arr_delay\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Choose bin width interactively on the fly\n",
-    "\n",
-    "Adding an interactive slider to the histogram allows us to interactively change the bin width."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def rebinnable_interactive_histogram(df, column_name):\n",
-    "    DEFAULT_BINWIDTH = 10\n",
-    "\n",
-    "    series = df[column_name]\n",
-    "\n",
-    "    trace = go.Histogram(x=series, xbins={\"size\": DEFAULT_BINWIDTH})\n",
-    "    figure_widget = go.FigureWidget(\n",
-    "        data=[trace],\n",
-    "        layout=go.Layout(\n",
-    "            yaxis={\"title\": \"Count\"},\n",
-    "            xaxis={\"title\": column_name},\n",
-    "            bargap=0.05,\n",
-    "        )\n",
+    "        data=[go.Histogram(x=series, xbins={\"size\": initial_bin_width})]\n",
     "    )\n",
     "\n",
     "    bin_slider = widgets.FloatSlider(\n",
-    "        value=DEFAULT_BINWIDTH,\n",
+    "        value=initial_bin_width,\n",
     "        min=1,\n",
     "        max=30,\n",
     "        step=1,\n",
@@ -108,10 +60,103 @@
     "        histogram_object.xbins = {\"size\": change[\"new\"]}\n",
     "    bin_slider.observe(set_bin_size, names=\"value\")\n",
     "\n",
-    "    return widgets.VBox([figure_widget, bin_slider])\n",
+    "    output_widget = widgets.VBox([figure_widget, bin_slider])\n",
+    "    return output_widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "db685cacdb834751942ca84b68de9e35",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(FigureWidget({\n",
+       "    'data': [{'type': 'histogram',\n",
+       "              'uid': '380a4d34-fde2-4c6a-876d…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "rebinnable_interactive_histogram(df[\"air_time\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## With a bit of styling to get you started"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def rebinnable_interactive_histogram(series, initial_bin_width=10):\n",
+    "    trace = go.Histogram(x=series, xbins={\"size\": initial_bin_width})\n",
+    "    figure_widget = go.FigureWidget(\n",
+    "        data=[trace],\n",
+    "        layout=go.Layout(\n",
+    "            yaxis={\"title\": \"Count\"},\n",
+    "            xaxis={\"title\": \"x\"},\n",
+    "            bargap=0.05,\n",
+    "        )\n",
+    "    )\n",
     "\n",
+    "    bin_slider = widgets.FloatSlider(\n",
+    "        value=initial_bin_width,\n",
+    "        min=1,\n",
+    "        max=30,\n",
+    "        step=1,\n",
+    "        description=\"Bin width:\",\n",
+    "        readout_format=\".0f\"  # display as integer\n",
+    "    )\n",
     "\n",
-    "rebinnable_interactive_histogram(df, \"arr_delay\")"
+    "    histogram_object = figure_widget.data[0]\n",
+    "\n",
+    "    def set_bin_size(change):\n",
+    "        histogram_object.xbins = {\"size\": change[\"new\"]}\n",
+    "    bin_slider.observe(set_bin_size, names=\"value\")\n",
+    "\n",
+    "    output_widget = widgets.VBox([figure_widget, bin_slider])\n",
+    "    return output_widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d11387667b724a308ad71db70e311915",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(FigureWidget({\n",
+       "    'data': [{'type': 'histogram',\n",
+       "              'uid': 'f1dcdc63-7d79-4e8e-8ab8…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "rebinnable_interactive_histogram(df[\"air_time\"])"
    ]
   },
   {
