--- a/rebinnable_interactive_histogram/rebinnable_histogram.ipynb
+++ b/rebinnable_interactive_histogram/rebinnable_histogram.ipynb
@@ -51,13 +51,14 @@
     "        max=30,\n",
     "        step=1,\n",
     "        description=\"Bin width:\",\n",
-    "        readout_format=\".0f\"  # display as integer\n",
+    "        readout_format=\".0f\",  # display as integer\n",
     "    )\n",
     "\n",
     "    histogram_object = figure_widget.data[0]\n",
     "\n",
     "    def set_bin_size(change):\n",
     "        histogram_object.xbins = {\"size\": change[\"new\"]}\n",
+    "\n",
     "    bin_slider.observe(set_bin_size, names=\"value\")\n",
     "\n",
     "    output_widget = widgets.VBox([figure_widget, bin_slider])\n",
@@ -107,11 +108,7 @@
     "    trace = go.Histogram(x=series, xbins={\"size\": initial_bin_width})\n",
     "    figure_widget = go.FigureWidget(\n",
     "        data=[trace],\n",
-    "        layout=go.Layout(\n",
-    "            yaxis={\"title\": \"Count\"},\n",
-    "            xaxis={\"title\": \"x\"},\n",
-    "            bargap=0.05,\n",
-    "        )\n",
+    "        layout=go.Layout(yaxis={\"title\": \"Count\"}, xaxis={\"title\": \"x\"}, bargap=0.05,),\n",
     "    )\n",
     "\n",
     "    bin_slider = widgets.FloatSlider(\n",
@@ -120,13 +117,14 @@
     "        max=30,\n",
     "        step=1,\n",
     "        description=\"Bin width:\",\n",
-    "        readout_format=\".0f\"  # display as integer\n",
+    "        readout_format=\".0f\",  # display as integer\n",
     "    )\n",
     "\n",
     "    histogram_object = figure_widget.data[0]\n",
     "\n",
     "    def set_bin_size(change):\n",
     "        histogram_object.xbins = {\"size\": change[\"new\"]}\n",
+    "\n",
     "    bin_slider.observe(set_bin_size, names=\"value\")\n",
     "\n",
     "    output_widget = widgets.VBox([figure_widget, bin_slider])\n",
@@ -187,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
